k8s-manifests/app/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-svc
  template:
    metadata:
      labels:
        app: catalog-svc
    spec:
      containers:
        - name: catalog-svc
          image: catalog-svc:latest
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
