k8s-manifests/app/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth-svc
  ports:
    - name: http
      port: 3000
      targetPort: http
