k8s-manifests/app/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-svc
spec:
  selector:
    app: catalog-svc
  ports:
    - name: http
      port: 8000
      targetPort: http
