k8s-manifests/app/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: order-svc
  ports:
    - name: http
      port: 8080
      targetPort: http
