k8s-manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: devops-test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: devops-test-strip-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - demo-app.yaryzhenko.com
      secretName: demo-app-tls
  rules:
    - host: demo-app.yaryzhenko.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 3000
          - path: /api/catalog
            pathType: Prefix
            backend:
              service:
                name: catalog-svc
                port:
                  number: 8000
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 8080
